2005-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/thumbnailer.schemas.in:
	* src/Embed.cpp:
	* src/Embed.h:
	* src/Makefile.am:
	* src/Printer.cpp:
	* src/main.cpp:

	Add support for processing multiple files in a row.

2005-12-08  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Turn off image animation and text blinking. Patch by Robert
	O'Callahan.

2005-12-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Fix invalid argument check.

2005-12-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Disable timeout when set to 0. Patch by Robert O'Callahan.

2005-12-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:
	* src/Writer.h:
	* src/main.cpp:

	Add PPM format output. Patch by Robert O'Callahan.

2005-11-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Suppress some C++ compiler warnings.

2005-11-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Updated.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Add output when timeout strikes.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 0.1.1 ===

	* configure.ac:
	* src/main.cpp:

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Fix schemas install rule.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix compile warning.

	* src/main.cpp:

	Don't crash on unknown or not given mode argument.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 0.1 ===

	* src/main.cpp:

	Uncomment debug define.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:

	Clean up on uninstall.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:
	* src/Prefs.cpp:
	* src/Prefs.h:
